Criação da tag Footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <h1>Setup 4Devs</h1>
-    <h3>Aqui você pode sonhar com o seu Setup dos sonhos 😍</h3>    
+    <h3>Aqui você pode sonhar com o seu Setup dos sonhos 😍</h3>
+    <footer>Oto Sales Junior - Todos os direitos reservados!</footer>
 </body>
 </html>
