alterações no footer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
     <h1>Setup 4Devs</h1>
     <h3>Aqui você pode comprar o Setup dos seus sonhos 😍</h3>
-    <footer>Oto Sales Junior - Todos os direitos reservados!</footer>
+    <footer>Este site foi desenvolvido por Oto Sales - Todos os direitos reservados!</footer>
 </body>
 </html>
